--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,4 +1,6 @@
 <app-server></app-server>
 <app-server></app-server>
-<app-success></app-success>
-<app-warning></app-warning>
+<div class="flex-box">
+  <app-success></app-success>
+  <app-warning></app-warning>
+</div>
