--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,6 +1,3 @@
+<button class="btn btn-primary" [disabled]="!allowNewServer">Add Server</button>
 <app-server></app-server>
 <app-server></app-server>
-<div class="flex-box">
-  <app-success></app-success>
-  <app-warning></app-warning>
-</div>
