--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,3 +1,4 @@
 <button class="btn btn-primary" [disabled]="!allowNewServer" >Add Server</button>
+<div [style.background-color]="color">needs info</div>
 <app-server></app-server>
 <app-server></app-server>
