--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,6 +1,11 @@
 <label for="">Server</label>
 <!-- <input type="text" class="form-control" (input)="onUpdateServerName($event)" /> -->
-<input type="text" class="form-control" [(ngModel)]="serverName" />
+<input
+  type="text"
+  class="form-control"
+  placeholder="enter your server name"
+  [(ngModel)]="serverName"
+/>
 <!-- <p>{{ serverName }}</p> -->
 <button
   class="btn btn-primary"
@@ -10,7 +15,9 @@
   Add Server
 </button>
 <!-- <p [innerText]="allowNewServer"></p> -->
-<p>{{ serverCreationStatus }}</p>
+<!-- <p>{{ serverCreationStatus }}</p> -->
+<p *ngIf="serverCreated; else noServer">Server was created, server name is {{ serverName }}</p>
+<ng-template #noServer> <p>No server was created!</p> </ng-template>
 
 <app-server></app-server>
 <app-server></app-server>
