--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -14,9 +14,18 @@
 >
   Add Server
 </button>
+
+<button class="btn btn-primary" (click)="onShowPassword()">Display Details</button>
+
+<p *ngIf="showPassword">Secret Password = tuna</p>
+
 <!-- <p [innerText]="allowNewServer"></p> -->
 <!-- <p>{{ serverCreationStatus }}</p> -->
-<p *ngIf="serverCreated; else noServer">Server was created, server name is {{ serverName }}</p>
-<ng-template #noServer> <p>No server was created!</p> </ng-template>
+<!-- <p *ngIf="serverCreated; else noServer">
+  Server was created, server name is {{ serverName }}
+</p>
+<ng-template #noServer> <p>No server was created!</p> </ng-template> -->
 
-<app-server *ngFor="let server of servers"></app-server>
+<div [ngStyle]="{backgroundColor:  logItem >= 5 ? 'blue': 'transparent'}" [ngClass]="{'white-text': logItem >= 5 }" *ngFor="let logItem of logs">Log number {{logItem}} was created!</div>
+
+<!-- <app-server *ngFor="let server of servers"></app-server> -->
